fixed catagory spacing

--- a/src/components/News.module.css
+++ b/src/components/News.module.css
@@ -16,6 +16,7 @@ img {
 .newsCategory {
     font-size: 0.8em;
     font-weight: 700;
+    margin-left: 1em;
 }
 
 .newsImage {
